scrolling issue of side nav for smaller screen, date alignments in screenshot page for mobile devices

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,6 +12,10 @@
     flex-grow: 1;
 }
 
+.list-group {
+    overflow-y: auto;
+}
+
 .menuitem,
 .sidebar-links {
     cursor: pointer;
