--- a/src/app/screenshots/screenshots/screenshots.component.css
+++ b/src/app/screenshots/screenshots/screenshots.component.css
@@ -31,7 +31,7 @@ figure {
 }
 
 .select_member {
-  font-size: 18px;
+  font-size: 16px;
   width: 100%;
   max-width: 240px;
   box-sizing: border-box;
